fix: correción do artigo en galego

--- a/src/content/blog/gl/indistinguible-da-maxia/index.mdx
+++ b/src/content/blog/gl/indistinguible-da-maxia/index.mdx
@@ -11,13 +11,13 @@ tags:
 
 import { YouTube } from 'astro-embed';
 
-Hai pouco menos dun ano, falaba con unhas amigas do moito que á xente lle gusta agora a tecnoloxía “retro”. Eu defendía que hoxe calquera ten no seu peto as mellores cámaras do momento e aínda así prefiren mercar cámaras dun só uso, como por exemplo as Kodak FunSaver.
+Hai pouco menos dun ano, falaba cunhas amigas do moito que á xente lle gusta agora a tecnoloxía “retro”. Eu defendía que hoxe calquera ten no seu peto as mellores cámaras do momento e aínda así prefiren mercar cámaras dun só uso, como por exemplo as Kodak FunSaver.
 
-A conversa foi derivando e eu comentei que pasaba o mesmo coa música. Hoxe, unha pode abrir Spotify, reproducir calquera canción creada polo ser humano ao instante e gozar dela na palma da man. Aínda así, a sección de vinilos das tendas non parece facer máis que medrar. “Pode que o vinilo sexa a cámara desbotable da música”, insistín eu.
+A conversa foi derivando e eu comentei que pasaba o mesmo coa música. Hoxe, un pode abrir Spotify, reproducir calquera canción creada polo ser humano ao instante e gozar dela na palma da man. Aínda así, a sección de vinilos das tendas non parece facer máis que medrar. “Pode que o vinilo sexa a cámara desbotable da música”, insistín eu.
 
 Entón unha das miñas amigas dixo que o vinilo tiña a súa “graza”. A ela parecíalle incrible que daquilo puidese saír música, no móbil dabas a reproducir e xa está, pero os vinilos eran… máxicos.
 
-Aquela reflexión da miña amiga espertou o riso nas persoas alí presentes, pero a min fíxome reflexionar. Falei do tema con outras persoas e moitas dixéronme que compartían o punto de vista da miña amiga: o móbil funciona sen máis, é intuitivo, pero que dun vinilo saia música semella arte de maxia. ¿Ten o iPhone un deseño tan bo como para que ninguén se sorprenda polo seu funcionamento ou é que xa non nos abraiamos coa maxia?, pregunteime eu.
+Aquela reflexión da miña amiga espertou o riso nas persoas alí presentes, pero a min fíxome cabilar. Falei do tema con outras persoas e moitas dixéronme que compartían o punto de vista da miña amiga: o móbil funciona sen máis, é intuitivo, pero que dun vinilo saia música semella arte de maxia. ¿Ten o iPhone un deseño tan bo como para que ninguén se sorprenda polo seu funcionamento ou é que xa non nos abraiamos coa maxia?, pregunteime eu.
 
 Hai tempo, lera unha frase sobre este tema, e volveu a min durante aquelas enquisas. A frase é de 1973, de cando Arthur C. Clarke rematou as súas tres leis. A terceira lei dicía o seguinte:
 
@@ -25,7 +25,7 @@ Hai tempo, lera unha frase sobre este tema, e volveu a min durante aquelas enqui
 
 Así que por iso decidín escribir este breve artigo, para intentar que o meu lector/a volva crer na maxia. Iremos pouco a pouco, contaréiche tres trucos. Agardo conseguir sorprenderte coa maxia que te rodea no teu día a día. Non lles busques a trampa, detrás da cortina non haberá magos esmeralda, só persoas, persoas brillantes.
 
-## Primeiro truco. A pedra que cantaba.
+## Primeiro truco. A rocha que cantaba.
 
 Comecemos cun truco xa algo antigo. O primeiro en executalo con éxito foi o mago Edison en 1877 [^2] e máis tarde foi perfeccionado polos magos de Columbia Records en 1948 [^3], si, a mesma discográfica que nos deu a Marc Anthony, Mariah Carey ou Julio Iglesias.
 
@@ -37,35 +37,35 @@ Colocaremos o noso molde de cera sobre un prato ao que lle daremos voltas (con m
 
 Tras isto colocaremos o noso vaso con agulla, ao que decidín chamarlle micrófono para manter a nomenclatura máxica, sobre o molde xiratorio. Agora canto unha bonita serenata, como por exemplo: Me olvidé de vivir de Julio Iglesias.
 
-Despois de que o meu micrófono sufrise toda a miña actuación, hános quedar un molde de cera raiado a máis non poder. Se nos achegamos moito ao molde poderemos ver que os sucos deixados pola nosa agulla non son simétricos. Isto é porque no molde deixamos escrito como soaba a nosa canción.[^4][^5] Velaquí unha foto da miña agulla gravando “Me olvidé de vivir ft. Pablo Portas” (realmente a foto non é miña pero para axudar a que o imaxines).
+Despois de que o meu micrófono padecese toda a miña actuación, hános quedar un molde de cera raiado a máis non poder. Se nos achegamos moito ao molde poderemos ver que os regos deixados pola nosa agulla non son simétricos. Isto é porque no molde deixamos escrito como soaba a nosa canción.[^4][^5] Velaquí unha foto da miña agulla gravando “Me olvidé de vivir ft. Pablo Portas” (realmente a foto non é miña pero para axudar a que o imaxines).
 
 ![Imaxe con microscopio electrónico dun LP de vinilo - Por Applied Science](@blogimages/magic/vinilo.jpg "Imaxe con microscopio electrónico dun LP de vinilo - Por Applied Science")
 
-Se agora collamos o molde de cera e o estampamos sobre o noso morea de vinilo fundido (despois de endurecer a cera ou pasala a un molde de metal), teremos creado entón unha copia da nosa canción e poderemos vendela a quen teña o castigo de escoitarnos cantar. Cando merquen o noso vinilo, sen sabelo, efectuarán a parte final do truco de maxia.
+Se agora collamos o molde de cera e o estampamos sobre a nosa morea de vinilo fundido (despois de endurecer a cera ou pasala a un molde de metal), teremos creado entón unha copia da nosa canción e poderemos vendela a quen teña o castigo de escoitarnos cantar. Cando merquen o noso vinilo, sen sabelo, efectuarán a parte final do truco de maxia.
 
 Usando o seu vaso de plástico con agulla, ou seguramente un tocadiscos, non nos imos enganar (aínda que ambos funcionarían[^6]), farán o proceso inverso da nosa gravación, a reprodución.
 
-A agulla pasará por enriba do vinilo tropezoando cos sucos do disco, iso fará vibrar o noso vaso de plástico, ou no seu defecto unha bobina de cobre dun tocadiscos moderno.
+A agulla pasará por enriba do vinilo tropezando cos regos do disco, iso fará vibrar o noso vaso de plástico, ou no seu defecto unha bobina de cobre dun tocadiscos moderno.
 
-Se achegamos moito o noso oído, poderémonos escoitar cantar de novo moi baixiño.
+Se achegamos moito o noso oído, poderémonos escoitarnos cantar de novo moi baixiño.
 
-A solución ao problema de volume soluciónase ou construíndo un altofalante máis grande, como o dos antigos fonógrafos (esa é a razón de que fosen tan grandes[^5]) ou amplificando o son dixitalmente, por iso os tocadiscos modernos usan unha bobina de cobre diante dun imán. Se logo “amplificamos” esa corrente, poderemos facer vibrar unha membrana máis “guai” como a do altofalante do teu tocadiscos.
+A solución ao problema do volume soluciónase ou construíndo un altofalante máis grande, como o dos antigos fonógrafos (esa é a razón de que fosen tan grandes[^5]) ou amplificando o son dixitalmente, por iso os tocadiscos modernos usan unha bobina de cobre diante dun imán. Se logo “amplificamos” esa corrente, poderemos facer vibrar unha membrana máis “guai” como a do altofalante do teu tocadiscos.
 
 Velaquí a maxia do tocadiscos. Se queres ver o “vaso de plástico micrófono altofalante” en acción, [Jaime Altozano ten un vídeo efectuando este truco de maxia](https://www.youtube.com/watch?v=EYJKlzOun0c).
 
-## Segundo truco. A pedra que contaba.
+## Segundo truco. A rocha que contaba.
 
-Para o meu seguinte truco, utilizarei unha pedra máxica, o cristal de cuarzo. Esta pedra máxica non sae do “Nether” como algúns gamers poidan pensar, é o mesmo cuarzo que se extrae na China, Brasil ou Noruega.[^7]
+Para o meu seguinte truco, utilizarei unha rocha máxica, o cristal de cuarzo. Esta rocha máxica non sae do “Nether” como algúns gamers poidan pensar, é o mesmo cuarzo que se extrae na China, Brasil ou Noruega.[^7]
 
-Para este truco teño que presentar a un mago brillante, Pierre Curie, si, o marido de Marie Curie, pode que o primeiro home en ciencia coñecido popularmente pola súa muller e non ao revés. Resulta que en 1880, Pierre e o seu irmán descubriron que se aplicaban corrente eléctrica ao cuarzo, este vibraba a un ritmo constante.[^8] Anos máis tarde, en 1919, outro mago brillante, William Eccles (o inventor do circuíto flip-flop), solucionou os problemas de amortecemento do cristal e conseguiu manter en movemento constante un diapasón.[^11]
+Para este truco teño que presentar a un mago brillante, Pierre Curie, si, o home de Marie Curie, pode que o primeiro home en ciencia coñecido popularmente pola súa muller e non ao revés. Resulta que en 1880, Pierre e o seu irmán descubriron que se aplicaban corrente eléctrica ao cuarzo, este vibraba a un ritmo constante.[^8] Anos máis tarde, en 1919, outro mago brillante, William Eccles (o inventor do circuíto flip-flop), solucionou os problemas de amortecemento do cristal e conseguiu manter en movemento constante un diapasón.[^11]
 
-Finalmente, nos anos vinte, os magos do Laboratorio Nacional de Física do Reino Unido e dos Laboratorios Bell conseguiron crear osciladores con esta pedra que lles permitían contar o tempo con precisión. Estes “reloxos” eran enormes e estaban metidos en fornos para mantelos sempre á mesma temperatura, xa que se o cuarzo se expandía ou contraía a frecuencia á que vibra cambiaría. Así foi como o seu reloxo só se desviaría un segundo cada catro meses.[^10]
+Finalmente, nos anos vinte, os magos do Laboratorio Nacional de Física do Reino Unido e dos Laboratorios Bell conseguiron crear osciladores con esta rocha que lles permitían contar o tempo con precisión. Estes “reloxos” eran enormes e estaban metidos en fornos para mantelos sempre á mesma temperatura, xa que se o cuarzo se expandía ou contraía a frecuencia á que vibra cambiaría. Así foi como o seu reloxo só se desviaría un segundo cada catro meses.[^10]
 
 Ata a chegada do reloxo atómico nos anos 60, o reloxo de cuarzo converteuse no estándar para medir o tempo. Esa mesma década os semiconductores baratos chegaron ao mercado, e inventar un reloxo que puidese ter a persoa do común era posible.
 
 Por que facían falta semiconductores para facer un reloxo?, preguntaraste. Pois porque o cuarzo non vibra unha vez cada segundo, vibra milleiros de veces por segundo, entón precisas levar a conta con algún tipo de dispositivo electrónico.[^12]
 
-Nos Xogos Olímpicos de Toquio de 1964, Seiko, unha das empresas patrocinadoras, ofreceu o seu novo reloxo de cuarzo como cronómetro de respaldo para a maratón.[^13] Cinco anos despois, Seiko lanzou o Astron 35SQ, o primeiro reloxo de pulseira de cuarzo. Só se desfasaba 5 segundos ao mes. Por 450.000 ienes, o prezo dun coche naquela época, unha podía adquirir un reloxo de ouro que prometía: “Algún día todos os reloxos serán como este”, e así foi.[^9]
+Nos Xogos Olímpicos de Toquio de 1964, Seiko, unha das empresas patrocinadoras, ofreceu o seu novo reloxo de cuarzo como cronómetro de respaldo para a maratón.[^13] Cinco anos despois, Seiko lanzou o Astron 35SQ, o primeiro reloxo de pulseira de cuarzo. Só se desfasaba 5 segundos ao mes. Por 450.000 ienes, o prezo dun coche naquela época, un podía adquirir un reloxo de ouro que prometía: “Algún día todos os reloxos serán coma este”, e así foi.[^9]
 
 ![Resonador de cuarzo](@blogimages/magic/cuarzo.jpg "Por Chribbe76 - Traballo propio, Dominio público, Wikimedia")
 
@@ -85,9 +85,9 @@ Se che queda curiosidade sobre a maxia de medir o tempo, Branch Education ten [u
 
 Por último, se che preocupa que mañá a alarma do teu móbil soe un segundo antes de tempo, déixame dicirche que os dispositivos conectados a internet están a sincronizar a súa hora co reloxo atómico máis próximo en tempo real, así que aínda que o cristal do teu móbil non sexa perfecto medindo o tempo, corrixe a súa desviación constantemente.[^15]
 
-## Terceiro truco. A pedra que pensaba.
+## Terceiro truco. A rocha que pensaba.
 
-Imos co meu último truco, onde converterei unha pedra en ouro, bo, non en ouro, o ouro é moi barato en comparación co que vou crear. Converterei a pedra en 450 máquinas capaces cada unha de facer 10 billóns \(\,10^{12}\,\) de operacións por segundo. É dicir, o cerebro de 450 MacBooks Pro co M3 Max.[^17] Esa é a clave, a gran revolución do noso tempo, os transistores na súa máxima expresión, os microchips.
+Imos co meu último truco, onde converterei unha rocha en ouro, bo, non en ouro, o ouro é moi barato en comparación co que vou crear. Converterei a rocha en 450 máquinas capaces, cada unha, de facer 10 billóns \(\,10^{12}\,\) de operacións por segundo. É dicir, o cerebro de 450 MacBooks Pro co M3 Max.[^17] Esa é a clave, a gran revolución do noso tempo, os transistores na súa máxima expresión, os microchips.
 
 Pero imos a iso, cal é o truco, como se converte unha lámina de 50 euros de silicio nunha lámina de procesadores de máis de 80.000 euros? A clave é esta máquina.[^18][^19][^20]
 
@@ -105,15 +105,15 @@ O obxectivo desta máquina é transformar o deseño dun procesador, o compoñent
 
 Para comezar, precisas unha lámina de silicio, lixeiramente máis grande ca un vinilo. Esta lámina debe estar perfectamente pulida e tratada, sen un só po. Considera que a peza máis pequena dun procesador actual é máis pequena ca un glóbulo vermello, polo que o po é un problema importante neste proceso.
 
-Para a nosa “fotocopia”, empregaremos luz “extremadamente” ultravioleta, unha luz que é absorbida ata polo aire. Para evitar isto, selaremos a nosa máquina ao baleiro.[^19]
+Para a nosa “fotocopia”, empregaremos luz “extremadamente” ultravioleta, unha luz que é absorbida ata polo aire. Para evitar isto, pecharemos a nosa máquina ao baleiro.[^19]
 
 Cun láser golpearemos unha pequena pinga de estaño con extrema precisión, a explosión (do tamaño da diminuta pinga de estaño) será máis quente ca o sol e de aí sairá a nosa luz violeta.
 
 Logo precisamos dirixila e concentrala. Un pode pensar, sen equivocación, en usar lentes de cristal. Se usas unha lente de cristal, podes queimar unha folla de papel, ou o teu ollo se non tes coidado. Pero a luz ultravioleta é tan delicada que sería absorbida polo propio cristal da lente. Por iso non se usan lentes, senón espellos. Espellos tan perfectos que só Zeiss, a empresa alemá de óptica, sabe como fabricalos. Estes espellos úsanse para redirixir a luz e ir concentrándoa.
 
-Finalmente, a luz atravesa os diminutos orificios do padrón a duplicar, rebota nun par de espellos adicionais e queima a superficie da lámina de silicio, gravando así o padrón desexado. Este proceso repítese para cada chip na lámina (aproximadamente 450) antes de pasar á seguinte lámina. Un brazo robótico dentro da cámara de baleiro coloca e move meticulosamente cada lámina. Este proceso lévase a cabo 185 veces por hora.[^21]
+Para rematar, a luz atravesa os diminutos orificios do padrón a duplicar, rebota nun par de espellos adicionais e queima a superficie da lámina de silicio, gravando así o padrón desexado. Este proceso repítese para cada chip na lámina (aproximadamente 450) antes de pasar á seguinte lámina. Un brazo robótico dentro da cámara de baleiro coloca e move meticulosamente cada lámina. Este proceso lévase a cabo 185 veces por hora.[^21]
 
-ASML, a única empresa no mundo capaz de facer isto[^19], ten unha preciosa animación promocional da súa máquina en funcionamento.
+ASML, a única empresa no mundo capaz de facer isto[^19], ten unha fermosa animación promocional da súa máquina en funcionamento.
 
 <YouTube id="https://youtu.be/h_zgURwr6nA" />
 
