fix: typo in about me spanish

--- a/src/content/about/es/index.mdx
+++ b/src/content/about/es/index.mdx
@@ -4,7 +4,7 @@ pubDate: 'Nov 17 2025'
 
 Como habrás podido intuir mi nombre es Pablo, <ins class="decoration-wavy decoration-accent">Pablo Portas López</ins>. Tengo {(fixed => (new Date().getFullYear() - new Date(fixed).getFullYear() - (new Date() < new Date(new Date().getFullYear(), new Date(fixed).getMonth(), new Date(fixed).getDate()) ? 1 : 0)).toString())('2005-02-07')} años y estoy estudiando Ingeniería Informática en la <ins class="decoration-fuchsia-800 decoration-wavy">Universidade da Coruña</ins>. Ahora mismo estoy en Suecia de Erasmus, en la <ins class="decoration-amber-300 decoration-wavy">Linnaeus University</ins>, pasando algo de <ins class="decoration-dotted decoration-red-600">friaxe</ins> 🧊.
 
-Soy un hombre apasionionado, hablo mucho, me gusta conocer a la gente, me gusta recorrer este planeta y, sobre todo, me gusta tratar de entenderlo. El <span class="font-serif">cine</span>, la <span class="font-mono">informática</span> y las <i>filloas</i> son las cosas que más feliz me hacen en el mundo 🌍.
+Soy un hombre apasionado, hablo mucho, me gusta conocer a la gente, me gusta recorrer este planeta y, sobre todo, me gusta tratar de entenderlo. El <span class="font-serif">cine</span>, la <span class="font-mono">informática</span> y las <i>filloas</i> son las cosas que más feliz me hacen en el mundo 🌍.
 
 Mi corta experiencia como informático es esta:
 
