feat: update meta description of magic article

--- a/src/content/blog/en/indistinguishable-from-magic/index.mdx
+++ b/src/content/blog/en/indistinguishable-from-magic/index.mdx
@@ -2,7 +2,7 @@
 pubId: 'magic'
 title: 'Indistinguishable from magic'
 description: |
-    Singing records, quartz watches and silicon processors: three technological magic tricks you use every day without noticing. Discover the science behind the everyday.
+  Singing vinyl, quartz watches, and silicon chips: three tech magic tricks you use every day without even knowing it.
 pubDate: 'Nov 18 2025'
 coverImageCredit: 'Illustration of an apocalyptic ASML lithography machine, own work, using gpt-image-1'
 tags:
