--- a/src/content/blog/es/indistingible-de-la-magia/index.mdx
+++ b/src/content/blog/es/indistingible-de-la-magia/index.mdx
@@ -2,7 +2,7 @@
 pubId: 'magic'
 title: 'Indistinguible de la magia'
 description: |
-  Vinilos que cantan, relojes de cuarzo y procesadores de silicio: tres trucos de magia tecnológica que usas cada día sin darte cuenta. Descubre la ciencia detrás de lo cotidiano.
+  Vinilos que cantan, relojes de cuarzo y chips de silicio: tres trucos de magia tecnológica que usas cada día sin saberlo.
 pubDate: 'Nov 18 2025'
 coverImageCredit: 'Ilustración de una máquina de litografía de ASML apocalíptica, trabajo propio, usando gpt-image-1'
 tags:
