--- a/src/content/blog/gl/indistinguible-da-maxia/index.mdx
+++ b/src/content/blog/gl/indistinguible-da-maxia/index.mdx
@@ -2,7 +2,7 @@
 pubId: 'magic'
 title: 'Indistinguible da maxia'
 description: |
-    Vinilos que cantan, reloxos de cuarzo e procesadores de silicio: tres trucos de maxia tecnolóxica que usas cada día sen decatarte. Descubre a ciencia detrás do cotián.
+  Vinilos que cantan, reloxos de cuarzo e chips de silicio: tres trucos de maxia tecnolóxica que usas cada día sen sabelo.
 pubDate: 'Nov 18 2025'
 coverImageCredit: 'Ilustración dunha máquina de litografía de ASML apocalíptica, traballo propio, usando gpt-image-1'
 tags:
